fixed spacing

--- a/Group Project/citystyle.css
+++ b/Group Project/citystyle.css
@@ -43,5 +43,5 @@ body {
 
 .spacer2 {
     width: 100%;
-    height: 40px;
+    height: 100px;
 }
